# painterWithQT

./: CMakeLists.txt  README.md  ellipse.cpp  ellipse.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myscene.cpp  myscene.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
